<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/reface_top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reface_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/sf_pro_regular"
                android:text="@string/cancel"
                android:textColor="#1B1E30"
                android:textSize="17sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sf_pro_semibold"
                android:gravity="center"
                android:text="@string/text"
                android:textColor="#1B1E30"
                android:textSize="17sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reface_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/sf_pro_semibold"
                android:text="@string/done"
                android:textColor="@color/main_color"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:alpha="0.2"
            android:background="@color/main_color"
            app:layout_constraintTop_toBottomOf="@id/reface_top_bar" />

        <org.reface.refaceapp.reface_ui.reface_editor.reface_text.RefaceTextStickerView
            android:id="@+id/text_sticker_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintDimensionRatio="@string/image_dimen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reface_top_bar" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_sticker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/main_color"
            android:text="@string/add_new_text"
            android:textAllCaps="false"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="343:48"
            app:layout_constraintTop_toBottomOf="@id/text_sticker_view" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>